<resources>
<<<<<<< HEAD
    <string name="app_name">Catalyst Projects</string>
=======
    <string name="app_name">The Catalyst</string>
>>>>>>> 1124fdd3ee1e5e3ccfd2f4049ec6cd750c80d1a3
    <string name="title_activity_login">Log In</string>
    <string name="prompt_email">User ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="_26">26</string>
    <string name="_27">27</string>
    <string name="_28">28</string>
    <string name="_29">29</string>
    <string name="_30">30</string>
    <string name="_31">31</string>
    <string name="_25">25</string>
    <string name="_24">24</string>
    <string name="_23">23</string>
    <string name="_22">22</string>
    <string name="_21">21</string>
    <string name="_20">20</string>
    <string name="_19">19</string>
    <string name="_18">18</string>
    <string name="_17">17</string>
    <string name="_16">16</string>
    <string name="_15">15</string>
    <string name="_14">14</string>
    <string name="_13">13</string>
    <string name="_12">12</string>
    <string name="_11">11</string>
    <string name="_10">10</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_9">9</string>
    <string name="christin">Christin</string>
    <string name="details">Details</string>
    <string name="technology">Technology</string>
    <string name="project_name">Project Name</string>
    <string name="sub_project">Sub-Project</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_top">LOGIN</string>
    <string name="current">Current</string>
    <string name="completed">Completed</string>
    <string name="hold">Hold</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dump">Dump</string>
    <string name="other">Other</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
<<<<<<< HEAD
    <string name="startdate">StartDate</string>
    <string name="enddate">EndDate</string>
    <string name="remaining_days">remaining days</string>
    <string name="project_name_dialog">project_name_dialog</string>
    <string name="start_date_dialog">Start_date_dialog</string>
    <string name="end_date_dialog">End_date_dialog</string>
    <string name="members_dialog">Members_dialog</string>
    <string name="technology_dialog">Technology_dialog</string>
    <string name="details_dialog">details_dialog</string>
    <string name="logout">Logout</string>
    <string name="about_us">About us</string>
    <string name="dialog_message">Are You Sure ??</string>
    <string name="dialog_title">Submit this project</string>
    <string name="usename">usename</string>

=======
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="remaining_days">Remaining Days</string>
    <string name="project_details">Project Details</string>
    <string name="to">to</string>
    <string name="hi">Hi,</string>
    <string name="logout">Logout</string>
    <string name="usename">Username</string>
    <string name="set_as_completed">Set As Completed</string>
    <string name="submit_project">Submit Project</string>
    <string name="if_you_have_completed_this_project_then_submit_by_clicking_below_button">If you have completed this project, then submit by clicking below button</string>
    <string name="running_project">Running Project</string>
    <string name="submitted_project">Submitted Project</string>
>>>>>>> 1124fdd3ee1e5e3ccfd2f4049ec6cd750c80d1a3

</resources>
