<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardc"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:foreground="?attr/selectableItemBackground"
    android:clickable="true"
    android:layout_marginTop="2dp"
    android:focusable="true"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="5dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/col1"
        android:layout_width="3dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="4dp"
        android:background="#000000"
        android:orientation="horizontal"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_prj"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/proj_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/userc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_margin="5dp"
                android:padding="2dp"
                android:text="@string/project_details"
                android:layout_marginTop="1dp"
                android:layout_marginStart="2dp"
                android:lines="1"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:orientation="vertical"
                >

                <ImageView
                    android:id="@+id/arrow_imgc"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="end"
                    android:src="@drawable/icons_next_page" />
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/bg_below_project"
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_gravity="center"
            android:orientation="horizontal"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/start_Datec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_date"
                android:textColor="#000000"
                android:textSize="14sp"
                android:layout_margin="5dp"
                android:maxLength="10"
                android:padding="2dp"
                android:layout_weight="1"
                android:lines="1" />

            <TextView
                android:id="@+id/to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textSize="14sp"
                android:textColor="#000000"
                android:layout_margin="5dp"
                android:padding="2dp"
                android:layout_weight="1"
                android:lines="1" />

            <TextView
                android:id="@+id/end_Datec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_date"
                android:textSize="14sp"
                android:maxLength="10"
                android:textColor="#000000"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="2dp"
                android:lines="1" />

            <TextView
                android:id="@+id/remaing_Daysc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remaining_days"
                android:textSize="14sp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:padding="2dp"
                android:lines="1" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lay_below_date"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_height="1dp"
            android:background="#000000"
            android:orientation="horizontal"/>
        <TextView
            android:id="@+id/detailsc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/details"
            android:layout_gravity="center"
            android:textColor="#000000"
            android:layout_margin="5dp"
            android:padding="2dp"
            android:layout_marginTop="1dp"
            android:layout_marginStart="2dp"
            android:lines="1"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>