<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
<<<<<<< HEAD
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:shimmer="http://schemas.android.com/tools"

=======
>>>>>>> 1124fdd3ee1e5e3ccfd2f4049ec6cd750c80d1a3
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:foreground="?attr/selectableItemBackground"
    android:clickable="true"
<<<<<<< HEAD
    android:focusable="true"
    android:background="@drawable/gradientbg"
=======
    android:layout_marginTop="2dp"
    android:focusable="true"
>>>>>>> 1124fdd3ee1e5e3ccfd2f4049ec6cd750c80d1a3
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="5dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/col"
<<<<<<< HEAD
        android:layout_width="match_parent"
        android:layout_margin="2dp"
        android:padding="5dp"
        android:layout_height="match_parent"
=======
        android:layout_width="3dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="4dp"
        android:background="#000000"
>>>>>>> 1124fdd3ee1e5e3ccfd2f4049ec6cd750c80d1a3
        android:orientation="horizontal"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_prj"
        android:orientation="vertical">
<<<<<<< HEAD

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">
            <!--<androidx.cardview.widget.CardView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/cardd"-->
                <!--android:layout_margin="5dp"-->
                <!--app:cardCornerRadius="15dp"-->
                <!--app:cardElevation="8dp"-->
                <!--app:cardBackgroundColor="@color/blue_light">-->

                <TextView
                    android:id="@+id/userc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginStart="2dp"
                    android:lines="1"
                    android:textColor="@color/dark_green"
                    android:padding="0dp"
                    android:text="@string/project_name"
                    android:textSize="18dp"
                    android:textStyle="bold" />
            <!--</androidx.cardview.widget.CardView>-->


                <ImageView
                    android:layout_alignParentRight="true"
                    android:id="@+id/arrow_btn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:gravity="right|end"
                    android:layout_gravity="right|end"
                    android:padding="5dp"
                    android:src="@drawable/arrow" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10dp"
                    android:text="Start Date"
                    android:layout_weight="4"
                    android:gravity="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10dp"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="End Date"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Remaining"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:text="@string/startdate"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:maxLength="10"
                    />

                <TextView
                    android:id="@+id/end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/enddate"
                    android:maxLength="10"
                    />
                <TextView
                    android:id="@+id/remaining_days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/remaining_days"
                    android:maxLength="10"
                    />

            </LinearLayout>
            <!--<TextView-->
            <!--android:id="@+id/technologyc"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textSize="14sp"-->
            <!--android:layout_margin="5dp"-->
            <!--android:padding="5dp"-->
            <!--android:layout_marginTop="6dp"-->
            <!--android:layout_marginStart="2dp"-->
            <!--android:text="@string/technology"-->
            <!--android:lines="1" />-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black"
                android:layout_marginTop="2dp">

            </LinearLayout>

            <TextView
                android:id="@+id/detailsc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_gravity="start"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/details"
                android:layout_marginTop="1dp"
                android:layout_marginStart="2dp"
                android:lines="1"/>

        </LinearLayout>

=======
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

        <TextView
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_margin="5dp"
            android:padding="2dp"
            android:textColor="#000000"
            android:text="@string/project_details"
            android:layout_marginTop="1dp"
            android:layout_marginStart="2dp"
            android:lines="1"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:orientation="vertical">

            <ImageView
                android:id="@+id/arrow_img"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:layout_toRightOf="@id/user"
                android:src="@drawable/icons_next_page" />
    </LinearLayout>
    </RelativeLayout>
        <LinearLayout
            android:id="@+id/laybelowmainproject"
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:background="#000"
            android:layout_gravity="center"
            android:orientation="horizontal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/start_Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:lines="1"
                android:maxLength="10"
                android:textColor="#000000"
                android:padding="2dp"
                android:text="@string/start_date"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textSize="14sp"
                android:textColor="#000000"
                android:layout_margin="5dp"
                android:padding="2dp"
                android:layout_weight="1"
                android:lines="1" />

        <TextView
            android:id="@+id/end_Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            android:textSize="14sp"
            android:maxLength="10"
            android:textColor="#000000"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:padding="2dp"
            android:lines="1" />

        <TextView
            android:id="@+id/remaing_Days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remaining_days"
            android:textSize="14sp"
            android:layout_weight="1"
            android:textColor="#000000"
            android:layout_margin="5dp"
            android:padding="2dp"
            android:lines="1" />
    </LinearLayout>
        <LinearLayout
            android:id="@+id/laymaindate"
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_gravity="center"
            android:orientation="horizontal"/>
        <TextView
            android:id="@+id/details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/details"
            android:layout_gravity="center"
            android:textColor="#000000"
            android:layout_margin="5dp"
            android:padding="2dp"
            android:layout_marginTop="1dp"
            android:layout_marginStart="2dp"
            android:lines="1"/>
>>>>>>> 1124fdd3ee1e5e3ccfd2f4049ec6cd750c80d1a3

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_child"
            android:layout_margin="5dp"
<<<<<<< HEAD
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>

    </LinearLayout>
=======
            android:padding="2dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>
    </LinearLayout>

    <!--</LinearLayout>-->
>>>>>>> 1124fdd3ee1e5e3ccfd2f4049ec6cd750c80d1a3
</androidx.cardview.widget.CardView>